# tarlens

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: diff.rs  header.rs  inspect.rs  main.rs  output.rs  reader.rs  stats.rs  verify.rs
