[package]
name = "tarlens"
version = "0.1.0"
edition = "2021"
description = "Tar archive analysis toolkit — inspect, verify, diff, and analyze tar archives with hand-written format parsing"
license = "MIT"
authors = ["Edgar Ortega Ramirez"]
keywords = ["tar", "archive", "inspect", "diff", "verify"]
categories = ["command-line-utilities", "filesystem", "parsing"]

[[bin]]
name = "tarlens"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
